objects/Sponsor_Office__c.object
<CustomObject><fields>
        <fullName>Class_Default_End_Time__c</fullName>
        <defaultValue>'5:00 PM'</defaultValue>
        <inlineHelpText>Enter the time in this format (HH:MM AM)</inlineHelpText>
        <label>Class Default End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Default_Start_Time__c</fullName>
        <defaultValue>'9:00 AM'</defaultValue>
        <inlineHelpText>Enter the time in this format (HH:MM AM)</inlineHelpText>
        <label>Class Default Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Default_Time_Zone__c</fullName>
        <label>Class Default Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Time_Zone</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Default_Class_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Class Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Sponsor Offices</relationshipLabel>
        <relationshipName>Sponsor_Office_Details</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>FAQ_Link__c</fullName>
        <label>FAQ Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>MATLAB_Academy_URL__c</fullName>
        <label>MATLAB Academy URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>RAC_Case_Area__c</fullName>
        <description>Workfront Story# 1736520</description>
        <inlineHelpText>Area to set RAC Cases to when creating cases for Post Payment Processing Notification.  Must match a valid Case Area.</inlineHelpText>
        <label>RAC Case Area</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Training_URL__c</fullName>
        <label>Training URL</label>
        <type>Url</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Sponsor Office</label><nameField>
        <label>Sponsor Office</label>
        <type>Text</type>
    </nameField><pluralLabel>Sponsor Offices</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Display_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Signature__c</columns>
        <columns>Class_Default_Start_Time__c</columns>
        <columns>Class_Default_End_Time__c</columns>
        <columns>Region__c</columns>
        <columns>Class_Default_Time_Zone__c</columns>
        <columns>Default_Class_Language__c</columns>
        <columns>Email__c</columns>
        <columns>Training_URL__c</columns>
        <columns>MATLAB_Academy_URL__c</columns>
        <columns>FAQ_Link__c</columns>
        <columns>RAC_Case_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Time_Format_Validation_Rule_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT ISBLANK( Class_Default_End_Time__c ) ,
NOT(REGEX( Class_Default_End_Time__c , '^((([0][0-9]|[1][0-1])|[0-9]):([0-5][0-9])( *)(AM))|((([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)(PM))$')))</errorConditionFormula>
        <errorDisplayField>Class_Default_End_Time__c</errorDisplayField>
        <errorMessage>Must be HH:MM AM/PM format and be a valid time</errorMessage>
    </validationRules><validationRules>
        <fullName>Time_Format_Validation_Rule_Start_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT ISBLANK(  Class_Default_Start_Time__c ) ,
NOT(REGEX( Class_Default_Start_Time__c , '^((([0][0-9]|[1][0-1])|[0-9]):([0-5][0-9])( *)(AM))|((([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)(PM))$')))</errorConditionFormula>
        <errorDisplayField>Class_Default_Start_Time__c</errorDisplayField>
        <errorMessage>Must be HH:MM AM/PM format and be a valid time</errorMessage>
    </validationRules></CustomObject>